# py-template

./: .pre-commit-config.yaml  CHANGELOG.md  cz.toml  pyproject.toml  ruff.toml
.github/: commit-message-instructions.md
py_template/: __init__.py
tests/: __init__.py
